# BASHImitation

./: .gitignore  CMakeLists.txt  README.md  parsing_test  test
header/parsing/: cleaner.hpp  splitter.hpp
header/tokens/: and.hpp  executable.hpp  lparen.hpp  or.hpp  rparen.hpp  semi.hpp  token.hpp
src/: main.cpp
src/parsing_src/: and.cpp  cleaner.cpp  splitter.cpp  splitter.hpp
src/token_src/: executable.cpp  or.cpp  semi.cpp
unit_tests/: cleaner_ut.cpp  parsing_ut.cpp  unit_test.cpp  unit_tests.cpp
unit_tests/cleaner_tests/: clean_octothrope_test.hpp  clean_whitespace_test.hpp
unit_tests/parsing_tests/: cleaner_test.hpp
unit_tests/splitter_tests/: split_test.hpp
